# ena

./: .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SConstruct  lol.ena  output.enair  publish-order.txt  run_example.sh  test.ena  tools.py
.github/workflows/: deploy-book.yml
book/: book.toml
book/src/: SUMMARY.md  basic.md  control-flow.md  introduction.md  standard-library.md
editors/: README  languages.toml
ena-bin/: Cargo.toml
ena-compiler/: Cargo.toml
ena-compiler/src/parser/: mod.rs  tok.rs
enalang/: Cargo.toml  README.md
enalang/src/: lib.rs  util.rs
enalang_cgen/: Cargo.toml
enalang_cgen/src/: chead.rs  gen.rs  head.c  lib.rs
enalang_checker/: Cargo.toml  README.md
enalang_checker/src/: checker.rs  lib.rs
enalang_checker/src/checks/: blocks.rs
enalang_compiler/: Cargo.toml  README.md
enalang_compiler/src/: ast.rs  ir.rs  irgen.rs  lib.rs  tok.rs
enalang_docgen/: Cargo.toml
enalang_docgen/src/: lib.rs
enalang_docgen/src/renderers/: html.rs  json.rs  md.rs  mod.rs
enalang_ir/: Cargo.toml  README.md
enalang_ir/src/: lib.rs
enalang_macro/: Cargo.toml
enalang_macro/src/: lib.rs
enalang_macro/src/macros/: class.rs  define.rs  id.rs  log.rs  mod.rs
enalang_optimizer/: Cargo.toml  README.md
enalang_optimizer/src/: lib.rs
enalang_optimizer/src/optimizations/: inline.rs  mod.rs  unused_blocks.rs
enalang_repl/: Cargo.toml
enalang_repl/src/: lib.rs
enalang_vm/: Cargo.toml  README.md
enalang_vm/src/: blocks.rs  heap.rs  lib.rs  machine.rs  supervisor.rs
enalang_vm/src/native/: core.rs  exceptions.rs  io.rs  mod.rs  os.rs  strings.rs  types.rs  vm.rs
examples/: advanced_functions.ena  annotations.ena  another_main.ena  arithmetics.ena  atom.ena  atoms_and_types.ena  conditionals.ena  drop.ena  error_handling.ena  escaped_blocks.ena  escaped_blocks_err.ena  exceptions.ena  factorial.ena  gc.ena  hello_world.ena  infinite_loop.ena  into_str.ena  loops.ena  memory_operations.ena  nested.ena  pointer.ena  random_number.ena  readme.txt  shadowing.ena  stack_manipulation.ena  string_operations.ena  strings.ena  swap.ena  threading.ena  try_call.ena  variables.ena  vars.ena  vec.ena
examples/glob_test/: main.ena  print_hello.ena
examples/inline/: local.ena  ok.ena  output.enair
examples/load/: linkee.ena  linkee.enair  main.ena  main.enair
src/: ast.c  ast.h  ast.rs  compiler.rs  ir.rs  lib.rs  main.c  main.rs  tok.c  tok.rs  util.c  util.h  util.rs  version.h
src/vm/: blocks.rs  compiler.rs  heap.rs  ir.rs  machine.rs  mod.rs
src/vm/native/: conv.rs  core.rs  exceptions.rs  io.rs  mod.rs  os.rs  strings.rs  types.rs  vm.rs
std/: README.md  call.ena  corgi  fs.ena  io.ena  load.ena  loop.ena  mem.ena  meta.ena  number.ena  ops.ena  os.ena  run_build.sh
std/base/: call.ena  fs.ena  loop.ena  mem.ena  ops.ena
std/base/collections/: vec.ena
std/c/: io.ena  meta.ena  number.ena  os.ena
std/collections/: vec.ena
std/vm/: load.ena  meta.ena  number.ena  os.ena
