[package]
name = "enalang"
version = "0.1.0"
authors = ["the Ena authors"]
edition = "2021"
description = "Exhaustingly Notorious Algorithms - umbrella package"
readme = "./README.md"
repository = "https://github.com/kislball/ena"
license = "GPL-3.0-only"
keywords = ["programming-language"]

[dependencies]
bincode = "1.3.3"
clap = { version = "4.1.1", features = ["derive"] }
colored = "2.0.0"
flexstr = { version = "0.9.2", features = ["serde"] }
glob = "0.3.1"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
enalang_compiler = { path = "../enalang_compiler" }
enalang_vm = { path = "../enalang_vm" }
