[package]
name = "enalang"
version = "0.6.0"
authors = [ "the Ena authors",]
edition = "2021"
description = "Exhaustingly Notorious Algorithms - umbrella package"
readme = "../README.md"
repository = "https://github.com/kislball/ena"
license = "GPL-3.0-only"
keywords = [ "programming-language",]

[dependencies]
bincode = "1.3.3"
clap = { version = "4.1.1", features = [ "derive",] }
colored = "2.0.0"
flexstr = { version = "0.9.2", features = [ "serde",] }
glob = "0.3.1"
rand = "0.8.5"
serde = { version = "1.0.152", features = [ "derive",] }
enalang_compiler = { path = "../enalang_compiler", version = "0.6.0" }
enalang_vm = { path = "../enalang_vm", version = "0.6.0" }
enalang_checker = { path = "../enalang_checker", version = "0.6.0" }
thiserror = "1.0.38"
enalang_ir = { version = "0.6.0", path = "../enalang_ir" }
enalang_optimizer = { version = "0.6.0", path = "../enalang_optimizer" }
enalang_docgen = { version = "0.6.0", path = "../enalang_docgen" }
enalang_macro = { version = "0.6.0", path = "../enalang_macro" }
enalang_repl = { version = "0.6.0", path = "../enalang_repl" }
serde_json = "1.0.108"
