[package]
name = "enalang_cgen"
version = "0.6.0\n"
authors = [ "the Ena authors",]
edition = "2021"
description = "Exhaustingly Notorious Algorithms - C code generator"
repository = "https://github.com/kislball/ena"
license = "GPL-3.0-only"
keywords = [ "programming-language",]

[dependencies]
bincode = "1.3.3"
flexstr = { version = "0.9.2", features = [ "serde",] }
serde = { version = "1.0.152", features = [ "derive",] }
rand = "0.8.5"
thiserror = "1.0.38"
sha256 = "1.1.2"
enalang_ir = { version = "0.6.0\n", path = "../enalang_ir" }
