[package]
name = "enalang_checker"
version = "0.6.1"
authors = [ "the Ena authors",]
edition = "2021"
description = "Exhaustingly Notorious Algorithms - checker"
repository = "https://github.com/kislball/ena"
license = "GPL-3.0-only"
keywords = [ "programming-language",]

[dependencies]
bincode = "1.3.3"
flexstr = { version = "0.9.2", features = [ "serde",] }
serde = { version = "1.0.152", features = [ "derive",] }
enalang_vm = { path = "../enalang_vm", version = "0.6.1" }
thiserror = "1.0.38"
enalang_ir = { version = "0.6.1", path = "../enalang_ir" }
