[package]
name = "enalang_docgen"
version = "0.4.0"
edition = "2021"

[dependencies]
enalang_ir = { version = "0.4.0", path = "../enalang_ir" }
flexstr = { version = "0.9.2", features = [ "serde",] }
markdown = "0.3.0"
serde = { version = "1.0.152", features = [ "derive",] }
serde_json = "1.0.93"
tinytemplate = "1.2.1"
