[package]
name = "enalang_docgen"
version = "0.6.0\n"
authors = [ "the Ena authors",]
edition = "2021"
description = "Exhaustingly Notorious Algorithms - docgen"
repository = "https://github.com/kislball/ena"
license = "GPL-3.0-only"
keywords = [ "programming-language",]

[dependencies]
enalang_ir = { version = "0.6.0\n", path = "../enalang_ir" }
flexstr = { version = "0.9.2", features = [ "serde",] }
markdown = "0.3.0"
serde = { version = "1.0.152", features = [ "derive",] }
serde_json = "1.0.93"
tinytemplate = "1.2.1"
