[package]
name = "enalang_ir"
version = "0.5.1"
authors = [ "the Ena authors",]
edition = "2021"
description = "Exhaustingly Notorious Algorithms - intermediate representation definition"
readme = "../README.md"
repository = "https://github.com/kislball/ena"
license = "GPL-3.0-only"
keywords = [ "programming-language",]

[dependencies]
bincode = "1.3.3"
flexstr = { version = "0.9.2", features = [ "serde",] }
num-traits = "0.2.15"
ordered-float = "3.4.0"
serde = { version = "1.0.152", features = [ "derive",] }
thiserror = "1.0.38"
