[package]
name = "enalang_optimizer"
version = "0.4.0"
authors = [ "the Ena authors",]
edition = "2021"
description = "Exhaustingly Notorious Algorithms - optimizer"
repository = "https://github.com/kislball/ena"
license = "GPL-3.0-only"
keywords = [ "programming-language",]

[dependencies]
enalang_ir = { version = "0.4.0", path = "../enalang_ir" }
enalang_vm = { version = "0.4.0", path = "../enalang_vm" }
flexstr = { version = "0.9.2", features = [ "serde",] }
rand = "0.8.5"
thiserror = "1.0.38"
