[package]
name = "enalang_repl"
version = "0.4.0"
edition = "2021"

[dependencies]
enalang_vm = { version = "0.4.0", path = "../enalang_vm" }
enalang_compiler = { version = "0.4.0", path = "../enalang_compiler" }
enalang_ir = { version = "0.4.0", path = "../enalang_ir" }
flexstr = "0.9.2"
thiserror = "1.0.50"
rand = "0.8.5"
