[package]
name = "enalang_repl"
version = "0.6.0"
authors = [ "the Ena authors",]
edition = "2021"
description = "Exhaustingly Notorious Algorithms - repl"
repository = "https://github.com/kislball/ena"
license = "GPL-3.0-only"
keywords = [ "programming-language",]

[dependencies]
enalang_vm = { version = "0.6.0", path = "../enalang_vm" }
enalang_compiler = { version = "0.6.0", path = "../enalang_compiler" }
enalang_ir = { version = "0.6.0", path = "../enalang_ir" }
flexstr = "0.9.2"
thiserror = "1.0.50"
rand = "0.8.5"
