[package]
name = "enalang_vm"
version = "0.3.3"
authors = [ "the Ena authors",]
edition = "2021"
description = "Exhaustingly Notorious Algorithms - virtual machine"
repository = "https://github.com/kislball/ena"
license = "GPL-3.0-only"
keywords = [ "programming-language",]

[dependencies]
bincode = "1.3.3"
flexstr = { version = "0.9.2", features = [ "serde",] }
rand = "0.8.5"
serde = { version = "1.0.152", features = [ "derive",] }
thiserror = "1.0.38"
enalang_ir = { version = "0.3.3", path = "../enalang_ir" }
